montando cabecalho e importando assets

--- a/task-organizer-frontend-web/public/index.html
+++ b/task-organizer-frontend-web/public/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ToDO - Organizando a sua vida</title>
+  <style>
+  body {
+    padding: 0;
+    margin: 0;
+  }
+    </style>
 </head>
 
 <body>
