--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ToDO - Organizando a sua vida</title>
   <style>
-  body {
-    padding: 0;
-    margin: 0;
-  }
-    </style>
+    body {
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+      padding: 0;
+      margin: 0;
+
+      font-family: 'Roboto', sans-serif;
+
+    }
+  </style>
 </head>
 
 <body>
